--- a/index.html
+++ b/index.html
@@ -22,16 +22,14 @@
               </ul> 
              </nav>
              <h1>Stephanie Liu</h1>
-            </div>  
-           <div class ="About me"> 
-               <img src =""
-           <div class="aboutMe">
-               <span id ="profile"><img src="https://imgur.com/aT4AlFT.jpg" alt="my profile pic" width="250px height:300px"></span>
-               <div class="bubble"><p>Hi I am stephanie Liu! I was born in China but now living in the U.S. I recently graduated from the University of Chicago with a MA in Art History. I also hold a Bachelor's degree from St. John's College in Philosophy and the History of Math and Science. I speak Chinese, English, French, German and I read Ancient Greek! Although coming from a humanities-focused background, I have always been passionate about technologies. So I am now learning how to code and wish to explore the intersection of technology, humanities and art. If you would like to know more about me, please follow me on my journey... </p> </div>
-           </div>                            
+            </div>                             
     </header>
-            
-  
+    <section class ="About me"> 
+        <span id ="profile"><img src="https://imgur.com/aT4AlFT.jpg" alt="my profile pic"></span>
+        <div class="introduction"><p>Hi I am stephanie! I recently graduated from the University of Chicago with a MA in Art History. I also hold a Bachelor's degree from St. John's College in Philosophy and the History of Math and Science. I speak Chinese, English, French, German and I read Ancient Greek! Although coming from a humanities-focused background, I have always been passionate about technologies. So I am now learning how to code and training to be a software developer. If you would like to know more about me, please follow me on my journey... </p> </div>
+            <div id ="bubble"></div>
+
+       </section>
     
 </body>
 </html>
