--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@ span<!DOCTYPE html>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
  
-   <!-- Optionals -->
    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -25,7 +24,7 @@ span<!DOCTYPE html>
   <script src="js/app.js" defer></script>
 </head>
 
-<!--Collapsible Navbar-->
+<!--Navbar-->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light ">
   <a class="navbar-brand" href="#">Stephanie Liu</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +55,7 @@ span<!DOCTYPE html>
          <div class="col">
           <div class="speech">
            <p class="speech hidden-large">Hi I am Stephanie, Follow Me on My Journey!</p>
-         <p class="speech hidden-mobile">  Hi I am Stephanie, Although coming from a humanities-focused background, I have always been passionate about technologies and hope to explore the intersection of technology, humanities and art. So I am now learning to code and training to be a software developer. If you would like to learn more about me, please follow me on my journey...</p></p>
+         <p class="speech hidden-mobile">  Hi I am Stephanie! Although coming from a humanities-focused background, I have always been passionate about technologies and hope to explore the intersection of technology, humanities and art. So I am now learning to code and training to be a software developer. If you would like to learn more about me, please follow me on my journey...</p></p>
       </div> 
     </div>
   </div>
