--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-span<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Bootstrap core CSS -->
@@ -6,7 +6,6 @@ span<!DOCTYPE html>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
  
-   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   <title>Stephanie Liu</title>
@@ -24,6 +23,7 @@ span<!DOCTYPE html>
   <script src="js/app.js" defer></script>
 </head>
 
+<body>
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light ">
   <a class="navbar-brand" href="#">Stephanie Liu</a>
@@ -62,6 +62,8 @@ span<!DOCTYPE html>
 </div>
 <section class="page-section" id="about">
   <!-- About -->
+  <!-- Followed this tutorial( https://www.youtube.com/watch?v=0zLf9urBYio)
+    code pen example(https://codepen.io/Devcrud/pen/XWboGgL)  -->
   <section class="page-section" id="about">
     <div class="container ">
       <div class="row">
@@ -71,7 +73,7 @@ span<!DOCTYPE html>
       </div>
       <div class="container d-flex justify-content-center">
         <div class="timeline">
-            <div class="timeline-container primary">
+            <div class="timeline-container home">
                 <div class="timeline-icon">
                   <i class="fas fa-home"></i>
                 </div>
@@ -81,7 +83,7 @@ span<!DOCTYPE html>
                     <p class="timeline-subtitle"></p>
                 </div>
             </div>
-            <div class="timeline-container danger">
+            <div class="timeline-container college">
                 <div class="timeline-icon">
                 <i class="fas fa-university"></i>
                 </div>
@@ -91,7 +93,7 @@ span<!DOCTYPE html>
                     <p class="timeline-subtitle"></p>
                 </div>
             </div>
-            <div class="timeline-container success">
+            <div class="timeline-container france">
                 <div class="timeline-icon">
                 <i class="fas fa-palette"></i>
                 </div>
@@ -101,7 +103,7 @@ span<!DOCTYPE html>
                     <p class="timeline-subtitle"></p>
                 </div>
             </div>
-            <div class="timeline-container warning">
+            <div class="timeline-container now">
                 <div class="timeline-icon">
                   <i class="fas fa-graduation-cap"></i>
                 </div>
@@ -119,11 +121,10 @@ span<!DOCTYPE html>
    
    <!-- Projects Grid -->
    <section class="page-section" id="projects">
-    <div class="container">
+     <div class="col-lg-12 text-center">
+      <h2 class="section-heading text-uppercase">My Project</h2>
+     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">My Projects</h2>
-          <h3 class="section-subheading text-muted"></h3>
         </div>
   </section>
   <hr style="width:100%", size="3", color=black> 
@@ -132,7 +133,7 @@ span<!DOCTYPE html>
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact</h2>
+          <h2 class="section-heading text-uppercase">Contact Me</h2>
           <form id ="my-form" action="https://formspree.io/f/xqkwdpkw" method="POST">
             <label>
                 Your name:
@@ -165,14 +166,12 @@ span<!DOCTYPE html>
     <div class="container">
       <div class="row ">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase"></h2>
-          <h3 class="section-subheading text-muted"></h3>
+          <h3 class="section-subheading">Follow Me on Social Media</h3>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-sm-4 text-center">
           <div class="team-member">
-            <p class="text-muted"></p>
             <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
                       <a href="https://www.instagram.com/#">
@@ -208,7 +207,7 @@ span<!DOCTYPE html>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-4">
-          <span class="">Copyright &copy; Stephanie Liu 2021</span>
+          <span class="Copyright">Copyright &copy; Stephanie Liu 2021</span>
         </div>
         </div>
       </div>
