--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     </div>
   </div>
 </div>
-<section class="page-section" id="about">
+
   <!-- About -->
-  <!-- Followed this tutorial( https://www.youtube.com/watch?v=0zLf9urBYio)
+  <!-- Followed this timeline tutorial( https://www.youtube.com/watch?v=0zLf9urBYio)
     code pen example(https://codepen.io/Devcrud/pen/XWboGgL)  -->
   <section class="page-section" id="about">
     <div class="container ">
@@ -117,17 +117,17 @@
     </div>
     </div>
   </section>
-  <hr style="width:100%", size="3", color=black>  
+  <hr style="width:100%">  
    
    <!-- Projects Grid -->
    <section class="page-section" id="projects">
      <div class="col-lg-12 text-center">
-      <h2 class="section-heading text-uppercase">My Project</h2>
+      <h2 class="section-heading text-uppercase">My Projects</h2>
      <div class="container">
       <div class="row">
         </div>
   </section>
-  <hr style="width:100%", size="3", color=black> 
+  <hr style="width:100%"> 
   <!-- Contact -->
   <section class="page-section" id="contact">
     <div class="container text-center">
@@ -184,8 +184,7 @@
                         <a href="https://www.linkedin.com/in/#">
                           <img
                           src="https://res.cloudinary.com/dt5zbnwvr/image/upload/c_scale,w_70/v1626108439/834713_linkedin_icon_g9gqds.png"
-                          alt="LinkedIn"
-                      />
+                          alt="LinkedIn" />
                       </a>
                     </li>
                     
